2020-06-16  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to bionic, change to derive package and version

2020-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Correct one badge URL

2020-04-01  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.12

	* configure.ac: Extract version from DESCRIPTION
        * configure: Rebuilt

	* README.md: Add 'last commit' badge, edited binaries section

2020-03-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* src/affine.cpp: Switch from depecreated BlackCalibrationHelper
	to CalibrationHelper()
	* src/bermudan.cpp: Idem
	* src/hullwhite.cpp: Idem
	* src/calendars.cpp: Switch from deprecated static method to standard
	method for getHolidayList()
	* src/curves.cpp: No longer use deprecated tolerance argument

2020-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add Debian badge

2020-01-15  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.11

        * configure.ac: Mark as 0.4.11
        * configure: Rebuilt

2020-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp (getCallabilitySchedule): Generalize support for
	Bond::Price to fall back to Callability::Price for QL < 1.17

2020-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* src/utils.cpp (makeOption): Update from now-deprecated
	FDEuropeanEngine to FdBlackScholesVanillaEngine
	(getCallabilitySchedule): Update from now-deprecated
	Callability::Price to Bond::Price
	* src/vanilla.cpp (americanOptionEngine): Update from
	now-deprecated FDDividendAmericanEngine and FDAmericanEngine to
	FdBlackScholesVanillaEngine

2019-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/*: Converted from RUnit to tinytest
	* inst/unitTests/*: Idem
	* tests/tinytest.R: Idem
	* tests/doRUnit.R: Idem
	* docker/ci/Dockerfile: Add tinytest, remove RUnit
