@@ -1,3 +1,7 @@
+2021-01-18  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-06-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Switch to bionic, change to derive package and version
